# MeetingMind

./: .gitignore  Dockerfile.frontend  EXPORT_SETUP.md  LINT_PRIORITY_LIST.md  LOCAL_DEVELOPMENT_GUIDE.md  README.md  SPEAKER_DETECTION_LEARNING_GUIDE.md  WHISPER_SETUP.md  docker-compose.dev.yml  docker-compose.yml  export_codebase.bat  export_codebase.js  export_codebase.py  export_codebase.sh
.claude/: settings.local.json
backend/: .env.example  README.md  ab_testing_framework.py  action_item_service.py  ai_orchestration.py  ai_provider_registry.py  alembic.ini  audio_pipeline_processor.py  audio_pipeline_ws.py  audio_processor.py  automation_endpoints.py  claude_endpoints.py  cloud_transcription_service.py  config.py  crud.py  cultural_adaptation_service.py  database.py  email_generation_service.py  error_handler.py  file_security.py  i18n_endpoints.py  i18n_models.py  insight_generation_service.py  insight_scheduler.py  insight_studio_service.py  insight_trigger_engine.py  jitter_buffer.py  jitter_buffer_api.py  jitter_buffer_validation.py  language_lab_service.py  language_specific_insights_service.py  main.py  meeting_insight_integration.py  models.py  multi_language_transcription_service.py  multi_level_summary_service.py  network_audio_server.py  network_diagnostics.py  network_diagnostics_api.py  network_transcription_api.py  (+39 more)
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md
electron/: ELECTRON_SECURITY.md  package.json  tsconfig.json
frontend/: README.md  (+4 more)
obs-plugin/: CMakeLists.txt
obs-plugin/src/: meetingmind-plugin.cpp  meetingmind-plugin.hpp
(+307 files in other folders)
